Horizontal overflow fix for mobile users

--- a/css/custom.css
+++ b/css/custom.css
@@ -109,6 +109,10 @@ Website Main color: #079bf5;
 
 /* end of scroll bar */
 
+* {
+  overflow-x: hidden;
+}
+
 body {
   /*
   background-color: rgb(0, 0, 0);
@@ -118,7 +122,6 @@ body {
   margin: 0;
   height: 100%;
   background-color: #000000;
-  overflow-x: hidden;
 }
 
 section {
